# mediatype

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: consts.rs  consts.txt  error.rs  lib.rs  media_type.rs  media_type_buf.rs  media_type_list.rs  name.rs  params.rs  parse.rs  serde.rs  value.rs
src/consts/: mod.rs  names.rs  names.txt  values.rs  values.txt
tests/: codegen.rs
